# ai-saas-starter-kit

./: .dockerignore  .gitignore  .python-version  Dockerfile  Dockerfile.dgx  README.md  docker-compose.dgx.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  requirements.dgx.txt
deploy/: dgx-setup.sh  lenovo-setup.sh
dgx-server/: main.py
src/config/: __init__.py  celery.py
src/config/settings/: base.py  local.py  production.py  staging.py
src/core/: services.py  urls.py  views.py
src/core/templates/: base.html  index.html
src/core/templates/partials/: demo_result.html
